"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

gtk/gx11.c, gtk-v2/src/main.c: Add checks for csocket.fd==-1 after return
   of DoClient.  With change in DoClient to close the socket, the network
   routines are not called again (like they used to be), and thus the
   GUI was't really aware the socket was closed, and wouldn't prompt for
   metaserver selection.
MSW 2006-05-21

Make socket handling more robust.
---
common/client.c: In DoClient() properly close the socket if an invalid packet
   was received.
common/newclient.h: Increase the receive buffer size to 65535 bytes. This
   allows the client to receive any valid packet (even if no currently
   existing server is supposed to send such big packets).
common/newsocket.c: Fix definitions of llevDebug and llevError to make error
   messages visible.
Andreas Kirschbaum 2006-05-21

common/mapdata.c: fix unitialized variable.
Ryo 2006-05-17

This commit adds client side support for the map2 & tick protocol commands.
In additional the the necessary decode logic, more layers are also added
to the map.
--
common/Makefile.am/.in: Fix proto directive
common/client.c: Add global tick variable.  Add links to handle map2
    and tick protocol commands.  Update setup request sent to server
    to request to use the tick and map2 commands.
common/client.h: Add additional fields to Animations structure.	 Increase
    MAX_MAP_OFFSET to match the value on the server.
common/commands.c: Add parsing of return of map2 failures on setup command
    so that client can fall back.  Add additional initializations for
    new fields in AnimCmd().  Change definition of NUM_LAYERS to match
    what the map1 command wants/expects.  Add Map2Cmd() to decode
    map2 protocol command.  Do some whitepsace clean of ExtSmooth().
    Add TickCmd()
common/init.c:  Add seeing of random number generator.
common/mapdata.c: Rewrite CLEAR_CELLS macro to handle additional layers.